# enviro-station

./: .gitignore  README.md
.github/workflows/: azure-static-web-apps-blue-smoke-0950dd603.yml  azure-static-web-apps-happy-forest-024296f03.yml  ci.yml  main_envirostation.yml
backend/: .dockerignore  .env.cloud.example  .env.example  .env.local.example  Dockerfile  README.md  docker-compose.yml  go.mod
backend/ingest/: package-lock.json  package.json
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard-v2/: .env.example  .env.local.example  .gitignore  Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
dashboard-v2/nginx/: default.conf.template
dashboard-v2/src/: App.jsx  main.jsx  styles.css
dashboard/public/: index.html  manifest.json
dashboard/src/: App.js  index.js
deploy/fly/: README.md  backend.fly.toml  dashboard.fly.toml
device/: .env.example  .env.local  .env.local.example  README.md  az_transmitter.py  backend_transmitter.py  configure_auto_updates.sh  device_interface.py  device_utilities.py  hardware_interface.py  install.sh  install_service.sh  main.py  pyproject.toml  sensor.service.template  template.service  test_backend_transmitter.py  utilities.py
device-scripts/: combined-iot-hub.py
device/config/: 52envirostation-unattended-upgrades
functions/ai-insights/: package-lock.json  package.json
functions/api/: package-lock.json  package.json
functions/iot-data/: package-lock.json  package.json
functions/realtime/: package-lock.json  package.json
(+85 files in other folders)
